# curious-regex

./: CMakeLists.txt  README.md  regex
src/: ASTNode.hpp  Matcher.hpp  NFAState.hpp  Parser.hpp  Regex.cpp  StringSlider.hpp  Unicode.hpp  logger.hpp  main.cpp  pattern.hpp
src/automata/: builder.hpp  dfa_state.hpp  nfa_state.hpp
src/engine/: backtrack.hpp  dfa.hpp  engine.hpp  helper.hpp  parallel.hpp  printer.hpp
src/frontend/: ast_node.hpp  parser.hpp
src/utils/: logger.hpp  string_slider.hpp  unicode.hpp
tests/: test_engine.cpp
